# voicecaster

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: postaudit.yml  preaudit-alignment.yml  preaudit-diarization.yml  preaudit-intake.yml  preaudit-review-prepare.yml  preaudit-transcription.yml  preaudit.yml
data/: runtime_control.json
inputs/: episodes.yaml
reviews/: README.md
reviews/episodio_005/: audit.yaml
src/voicecaster/: archive_utils.py  audio_normalize.py  audio_probe.py  audio_publish.py  cli.py  config.py  diarizer.py  downloader.py  drive_uploader.py  episode_queue.py  models.py  postaudit.py  preaudit.py  preaudit_alignment.py  preaudit_common.py  preaudit_diarization.py  preaudit_intake.py  preaudit_review_prepare.py  preaudit_transcription.py  redecode.py  reporting.py  runtime_control.py  speaker_alignment.py  stage_selector.py  status_manager.py  transcriber.py  url_resolver.py  vad.py  whisperx_aligner.py  work_layout.py  yaml_io.py
work/episodio_001/: README.md  episode.json  full_transcript.srt  full_transcript.txt  outline.md  report.json  speaker_segments.json  speaker_timeline.rttm  status.json  summary.md  transcript_segments.json
work/episodio_002/: aligned_transcript_segments.json  episode.json  full_transcript.srt  full_transcript.txt  full_transcript_speakers.srt  report.json  speaker_segments.json  speaker_timeline.rttm  summary.md  transcript_segments.json
work/episodio_003/: report.json
work/episodio_004/: aligned_transcript_segments.json  episode.json  report.json  summary.md
(+41 files in other folders)
