[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicecaster"
version = "0.1.0"
description = "Automated podcast preaudit/postaudit pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "codesam-com" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
